# KyaBank

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
include/: GIFReg.h  GifReg.h  MultiDelegate.h  PointerConv.h  Types.h  ed3D.h  edList.h  edMem.h  edStr.h  edSystem.h  port.h  renderer.h
include/edVideo/: VideoD.h
include/port/: vu1_emu.h
src/: ConvertMesh.cpp  ConvertTexture.cpp  ConvertTexture.h  MeshBuffer.cpp  PointerConv.cpp  ed3D.cpp  edStr.cpp  edSystem.cpp  main.cpp
src/Mesh/: ConvertMesh.cpp  ConvertMesh.h  MeshBuffer.cpp  MeshBuffer.h  TinyGltfImpl.cpp  Winding.cpp  Winding.h
